# sessionx

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  README.md  SECURITY.md  install.sh  release.toml
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
completions/: _sessionx  sessionx.bash  sessionx.fish
shell/: sessionx-helpers.fish  sessionx-helpers.sh
src/: agent.rs  agent_state.rs  config.rs  hooks.rs  hooks_repo.rs  main.rs  notify.rs  picker.rs  status.rs  themes.rs  tmux.rs  worktree.rs
src/cmd/: add.rs  agent_hooks.rs  agent_state.rs  config.rs  dash.rs  default.rs  edit.rs  hooks.rs  init.rs  ls.rs  mod.rs  mode.rs  open.rs  rm.rs  theme.rs
src/cmd/init/: detect.rs  mod.rs  render.rs  wizard.rs
templates/: sessionx.yaml.tmpl
