[package]
name = "sessionx"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "A simple tmux session manager with optional git-worktree mode and per-project status bars"
authors = ["Jerome Coloma"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeromecoloma/sessionx"
homepage = "https://github.com/jeromecoloma/sessionx"
keywords = ["tmux", "session", "worktree", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "sessionx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
dirs = "6"
shell-words = "1"
inquire = "0.9"
anstyle = "1"
ratatui = "0.29"
ansi-to-tui = "7"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
